ADDED BASIC SECURITY AND A STRUCTURE FOR NOTE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=security
 
 spring.security.user.name=admin
-spring.security.user.password=pass
+spring.security.user.password=password
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/secureNotes
+spring.datasource.username=secureNotesUser
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security =DEBUG
